- Rearrange and test RC1

--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -1797,3 +1797,16 @@ Wall-Up_Info_04=Wall segment has been located
 Android_Options=Android Options
 ChkAdbClickDragScript=Use script for accurate Click && Drag
 ChkAdbClickDragScript_Info=Use Android specific script file for Click & Drag.\r\nIf unchecked use more compatible 'input swipe'.
+[sam m0d log msg]
+Check troops queue in train=Check troops queue in train, is that any troops stuck...
+Dark Elixir=Dark Elixir
+Elixir=Elixir
+Not enough=Not enough
+Prepare for train number Of=Prepare for train number Of
+Ready to train=Ready to train
+to train=to train
+Training Troops & Spells=Training Troops & Spells
+Waiting for troops ready=Waiting for troops ready...
+Waiting for troops ready...=Waiting for troops ready...
+with total=with total
+Your Army Camps are now Full=Your Army Camps are now Full
