--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -1797,3 +1797,158 @@ Wall-Up_Info_04=Wall segment has been located
 Android_Options=Android Options
 ChkAdbClickDragScript=Use script for accurate Click && Drag
 ChkAdbClickDragScript_Info=Use Android specific script file for Click & Drag.\r\nIf unchecked use more compatible 'input swipe'.
+[sam m0d]
+1=Zap
+10=Random Click
+100=Custom + Army 1
+101=Custom + Army 2
+102=Custom + Army 3
+103=Use quick train to train army, custom train setting to revamp donated troops.
+105=Enable deploy cc troops first
+106=Deploy cc troops first, only support for standard attack mode
+107=Deploy speed for all standard attack mode.
+108=Modify Unit Factor
+109=Unit deploy delay = Unit setting x Unit Factor (millisecond)
+11=Advanced Random Click On Button
+110=Modify Wave Factor
+111=Switch troop delay = Wave setting x Wave Factor (millisecond)
+112=Attack II
+113=Collectors near redline, Distance between redline to collectors - Tiles:
+114=Check how many collectors are near redline. If more than % you set then attack.
+115=Distance between redline to collectors. Use Tiles as measure.
+12=Enable Random Click On Button Area =-= Train/Remove Troops And Etc.
+13=Enable Setlog for Advanced Random Click.
+14=Other
+15=No League
+16=Collectors outside
+17=Skip outside collectors check IF Target Resource Over
+18=Enable advanced update for wall
+19=Delay:
+2=Use SamM0d Zap
+20=Enable custom ocr image to read clan castle request.
+22=Skip outside collectors check IF Target Townhall Level is lower than or equal:
+23=GetMyOcr Debug
+24=SamM0d Debug
+25=Switch between profile stats
+25=Switch Google Account And Profile
+26=Enable switch account
+26=Better result is pause bot before view stats.
+27=Google Account slot 1 with profile:
+28=Google Account slot 2 with profile:
+29=Google Account slot 3 with profile:
+3=Min. amount of Dark Elixir:
+30=Google Account slot 4 with profile:
+31=Google Account slot 5 with profile:
+32=Google Account slot 6 with profile:
+33=Google Account slot 7 with profile:
+34=Google Account slot 8 with profile:
+35=Wait CC Troops for all mode. Troops Strength:
+36=Get shared_prefs
+37=Copy Village save files from Emulator to current profile. Make village name image from profile.
+38=Use replace shared_prefs
+39=Use replace shared_prefs method to load account.
+4=Only Zap Drills in Dead Bases
+40=Increase global delay setting:
+41=Do Check village and profile after load.
+42=Multi Finger
+42=Random
+43=Random
+44=Four Finger Standard
+45=Four Finger Spiral Left
+46=Four Finger Spiral Right
+47=Eight Finger Blossom
+48=Eight Finger Implosion
+49=Eight Finger Pin Wheel Spiral Left
+5=TH snipe NoZap if Heroes Deployed
+50=Eight Finger Pin Wheel Spiral Right
+51=Custom Donate CC checking time:
+52=seconds
+53=When waiting for full army, use how many seconds for check the clan chat if got new message.
+54=Attack
+55=CSV Deployment Speed - Dead Base
+56=Increase or decrease the speed at which the CSV attack script deploys troops and waves.
+57=CSV Deployment Speed - Alive Base
+58=Attack Now
+59=Stick to army train page when train/spell time left
+6=Random Zap Drills Position
+60=Will stick to army train page until troops or spells train finish. (Max 5 minutes)(Spell only available if wait for spell enable)
+61=minute(s)
+62=Enable delete excess troops
+63=Check is that troops excess your custom army quantity setting, if yes then delete excess value.
+64=My Troops
+65=My Spells
+66=Enable Custom Train and spell
+67=By Order
+68=ReVamp or Train will be follow the order you had set.
+69=Disable pre-train troops
+7=Check Drill exist before do second or third zap
+70=Disable pre-train troops, normally use by donate and train setting together.
+71=Composition Army 1
+72=Composition Army 2
+73=Composition Army 3
+74=Reset Troops
+75=Reset Order
+76=Total
+77=Pre-Brew Lightning
+78=Pre-Brew Heal
+79=Pre-Brew Rage
+8=Prevent triple zap on same drill
+80=Pre-Brew Jump
+81=Pre-Brew Freeze
+82=Pre-Brew Clone
+83=Pre-Brew Poison
+84=Pre-Brew Earth
+85=Pre-Brew Haste
+86=Pre-Brew Skeleton
+87=Pre-Brew Lightning after available spell prepare finish.
+88=Pre-Brew Heal after available spell prepare finish.
+89=Pre-Brew Rage after available spell prepare finish.
+9=Min. DE from each Drill:
+90=Pre-Brew Jump after available spell prepare finish.
+91=Pre-Brew Freeze after available spell prepare finish.
+92=Pre-Brew Clone after available spell prepare finish.
+93=Pre-Brew Poison after available spell prepare finish.
+94=Pre-Brew Earth after available spell prepare finish.
+95=Pre-Brew Haste after available spell prepare finish.
+96=Pre-Brew Skeleton after available spell prepare finish.
+97=Auto dock to emulator
+98=Train Combo:
+99=Custom Mode Only
+Auto Hide Emulator=Auto hide emulator after start
+Auto Minimize Bot=Auto minimize bot after start
+ContinueStay=Avoid switch, if troops getting ready within [Minute(s)]:
+ContinueStayValue=Please enter how many minute(s)
+Debug Image=SamM0d Debug Image
+DeleteExcessSpells=Enable delete excess Spells
+DeleteExcessSpellsTip=Check is that spells excess your quantity setting, if yes then delete excess value.
+DonateLimit=Limited units for each round troops donation, Unit(s):
+DonateLimitTips=Prevent over donate the unit you are train for and mess up the troops queue
+DonateLimitValue=Please enter the unit number for limited each round of troops donate.
+ForcePreBrewSpell=Force Pre-Brew Spell
+ForcePreBrewSpellTip=Force Pre-Brew Spell to queue. ONLY Enable if you only brew 1 type of spell.
+ForcePreTrainTroops=Force pre-train troops when army strength over percentage:
+ForcePreTrainWhenSwitch=Force pre-train troops for attack type account before switch.
+MF_Atk_Style=Style:
+My Clan Castle=My Clan Castle
+Order=Order
+RemoveClanCastleSpells=Remove Clan Castle Spells If not is follow type or over quantity:
+RemoveClanCastleTroops=Remove Clan Castle Troops If not is follow type or over quantity:
+txtDelay=Delay
+txtNoOf=Enter the No. of
+txtQty=Spells to make.
+Un specify=Un specify
+Unit Quantity=Unit Quantity
+WaitForCCSpell=Wait For Clan Castle Spells.
+[sam m0d log msg]
+Check troops queue in train=Check troops queue in train, is that any troops stuck...
+Dark Elixir=Dark Elixir
+Elixir=Elixir
+Not enough=Not enough
+Prepare for brew number Of=Prepare for brew number Of
+Prepare for train number Of=Prepare for train number Of
+Ready to train=Ready to train
+to train=to train
+Training Troops & Spells=Training Troops & Spells
+Waiting for troops ready=Waiting for troops ready...
+with total=with total
+Your Army Camps are now Full=Your Army Camps are now Full
