--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -24,6 +24,7 @@ Emulator_Item_16=Leshi
 Emulator_Item_17=Microvirt
 Emulator_Item_18=Yeshen
 Emulator_Item_19=Aiyouxi
+Emulator_Item_20=Tencent
 Group_01=Distributors
 Group_02=Advanced Android Options
 LblAdvanced_Android_Options=Suspend/Resume Android
@@ -1923,6 +1924,7 @@ Your Army Camps are now Full=Your Army Camps are now Full
 113=Collectors near redline, Distance between redline to collectors - Tiles:
 113=Collectors near redline, Distance between redline to collectors - Tiles:
 113=Collectors near redline, Distance between redline to collectors - Tiles:
+113=Collectors near redline, Distance between redline to collectors - Tiles:
 114=Check how many collectors are near redline. If more than % you set then attack.
 115=Distance between redline to collectors. Use Tiles as measure.
 12=Enable Random Click On Button Area =-= Train/Remove Troops And Etc.
@@ -2114,7 +2116,9 @@ Your Army Camps are now Full=Your Army Camps are now Full
 2=Use SamM0d Zap
 2=Use SamM0d Zap
 2=Use SamM0d Zap
+2=Use SamM0d Zap
 20=Enable custom ocr image to read clan castle request.
+22=Skip outside collectors check IF Target Townhall Level is lower than or equal:
 22=Skip outside collectors check IF Target Townhall Level is lower than or equal:
 22=Skip outside collectors check IF Target Townhall Level is lower than or equal:
 22=Skip outside collectors check IF Target Townhall Level is lower than or equal:
@@ -2222,15 +2226,8 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
-25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
@@ -2238,18 +2235,14 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
 25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
+25=Switch between profile stats
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch between profile stats
@@ -2260,29 +2253,20 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch between profile stats
-25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
-25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
@@ -2292,22 +2276,42 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
 25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch between profile stats
@@ -2327,36 +2331,10 @@ Your Army Camps are now Full=Your Army Camps are now Full
 26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
 26=Enable switch account
 26=Enable switch account
 26=Better result is pause bot before view stats.
@@ -2366,17 +2344,7 @@ Your Army Camps are now Full=Your Army Camps are now Full
 26=Enable switch account
 26=Enable switch account
 26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
 26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Enable switch account
@@ -2386,10 +2354,7 @@ Your Army Camps are now Full=Your Army Camps are now Full
 26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Enable switch account
-26=Better result is pause bot before view stats.
 26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
@@ -2397,24 +2362,65 @@ Your Army Camps are now Full=Your Army Camps are now Full
 26=Enable switch account
 26=Enable switch account
 26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
 26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
 27=Google Account slot 1 with profile:
 27=Google Account slot 1 with profile:
 27=Google Account slot 1 with profile:
@@ -2506,6 +2512,8 @@ Your Army Camps are now Full=Your Army Camps are now Full
 27=Google Account slot 1 with profile:
 27=Google Account slot 1 with profile:
 27=Google Account slot 1 with profile:
+27=Google Account slot 1 with profile:
+28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
@@ -2597,12 +2605,4 @@ Your Army Camps are now Full=Your Army Camps are now Full
 28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-29=Google Account slot 3 with profile:
-76=Total
+72=Composition Army 2
