--- a/Languages/English.ini
+++ b/Languages/English.ini
@@ -2025,6 +2025,7 @@ Your Army Camps are now Full=Your Army Camps are now Full
 19=Delay:
 19=Delay:
 19=Delay:
+19=Delay:
 2=Use SamM0d Zap
 2=Use SamM0d Zap
 2=Use SamM0d Zap
@@ -2212,66 +2213,6 @@ Your Army Camps are now Full=Your Army Camps are now Full
 22=Skip outside collectors check IF Target Townhall Level is lower than or equal:
 23=GetMyOcr Debug
 24=SamM0d Debug
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
@@ -2279,8 +2220,6 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
@@ -2293,18 +2232,11 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
-25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch Google Account And Profile
@@ -2312,14 +2244,10 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
-25=Switch Google Account And Profile
-25=Switch between profile stats
-25=Switch between profile stats
-25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
-25=Switch Google Account And Profile
+25=Switch between profile stats
 25=Switch between profile stats
 25=Switch Google Account And Profile
 25=Switch between profile stats
@@ -2328,44 +2256,82 @@ Your Army Camps are now Full=Your Army Camps are now Full
 25=Switch Google Account And Profile
 25=Switch between profile stats
 25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch Google Account And Profile
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch between profile stats
+25=Switch Google Account And Profile
+25=Switch between profile stats
 26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
@@ -2377,6 +2343,44 @@ Your Army Camps are now Full=Your Army Camps are now Full
 26=Enable switch account
 26=Enable switch account
 26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
+26=Enable switch account
 26=Enable switch account
 26=Enable switch account
 26=Better result is pause bot before view stats.
@@ -2395,31 +2399,28 @@ Your Army Camps are now Full=Your Army Camps are now Full
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
 26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
-26=Enable switch account
-26=Enable switch account
-26=Better result is pause bot before view stats.
-26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 26=Enable switch account
 26=Enable switch account
 26=Enable switch account
 26=Enable switch account
 26=Better result is pause bot before view stats.
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Enable switch account
+26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
 26=Enable switch account
 26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
+26=Enable switch account
+26=Better result is pause bot before view stats.
 26=Better result is pause bot before view stats.
 27=Google Account slot 1 with profile:
 27=Google Account slot 1 with profile:
@@ -2604,5 +2605,5 @@ Your Army Camps are now Full=Your Army Camps are now Full
 28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
 28=Google Account slot 2 with profile:
-28=Google Account slot 2 with profile:
-72=Composition Army 2
+76=Total
+97=Auto dock to emulator
